src/components/categorySelect/styles.module.css
.categoryContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
}

.category {
    position: absolute;
    color: var(--text-color);
    font: var(--font-2);
    border-radius: 50%;
}

.center {
    position: absolute;
    color: var(--text-color);
    font: var(--font-1);
    background-color: var(--background-color-secondary);
    border-radius: 50%;
    padding: 0.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

.categoryTextContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: relative;
}

